syntax = "proto3";

// proto 包名
package api;
// goctl rpc protoc sms.proto --go_out=./pb --go-grpc_out=./pb --zrpc_out=. --client=true
// 生成 golang 代码后的包名
option go_package = "codexie.com/w-book-code";

// 发送验证码请求
message SendCodeReq {
    string Phone = 1; // 手机号码
    string Biz = 2;   // 业务类型
}

// 通用响应体
message CommonResult {
    string Msg = 1;
    string Code = 2;
}
// 发送验证码响应
message SendCodeResp {
    CommonResult result = 1;
}

// 校验验证码请求
message VerifyCodeReq {
  string Phone = 1; // 手机号码
  string Biz = 2;   // 业务类型
  string Code = 3;  //验证码
}

// 校验验证码响应
message VerifyCodeResp {
  CommonResult result = 1;
}



// 定义 Greet 服务
service SMS {
  rpc SendCode(SendCodeReq) returns (SendCodeResp);
  rpc VerifyCode(VerifyCodeReq) returns(VerifyCodeResp);
}